# chess_bot

./: .gitmodules  CMakeLists.txt  Makefile  README.md  benchmark.py  board.c  board.h  fen.c  main.c  move.c  move.h  profile.c  profile.h  something_wrong  uci.c  uci.h  utils.c  utils.h
algorithm/: board_score.c  board_score.h  bot.c  bot.h  game_history.c  game_history.h  heuristic.c  heuristic.h  min_max.c  min_max.h  move_categorization.c  move_categorization.h  move_sort.c  move_sort.h  nega_scout.c  nega_scout.h  negamax.c  null_move.c  null_move.h  quiesce.c  quiescence.c  quiescence.h  reductions.c  reductions.h  search_result.c  search_result.h  time_manager.c  time_manager.h  transposition_table.c  transposition_table.h  zobrist_hash.c
algorithm/heuristic/: feature.c  feature.h  game_phase.c  game_phase.h  heuristic.c  heuristic.h  heuristic_io.h  heuristic_values.h  heuristic_values.json  king_safety_score.c  king_safety_score.h  material_score.c  material_score.h  pawn_structure_score.c  pawn_structure_score.h  piece_square_tables.h  position_score.c  position_score.h  rook_score.c  rook_score.h  square_control.c  square_control.h
algorithm/heuristic/tests/: symetric_heuristic_test.c  symetric_heuristic_test.h
algorithm/known_endgames/: endgames.c  endgames.h
algorithm/known_endgames/pyrrhic/: api.h  tbconfig.h  tbprobe.c  tbprobe.h
end_game_generation/: generate_endgame.py
engine/: black_pawn_moves.c  board_stack.c  board_stack.h  board_state.c  board_state.h  encoded_move.c  encoded_move.h  move_stack.c  move_stack.h  piece_moves.c  piece_moves.h  white_king_moves.c  white_pawn_moves.c  white_rook_moves.c
engine/attack_generation/: attack_generation.c  attack_generation.h  bishop_attacks.c  bishop_magic_numbers.h  black_pawn_attack_tables.h  black_pawn_attacks.c  king_attack_table.h  king_attacks.c  knight_attack_table.h  knight_attacks.c  pawn_attack_tables.h  pawn_attacks.c  queen_attacks.c  rook_attacks.c  rook_magic_numbers.h  white_pawn_attack_tables.h  white_pawn_attacks.c
engine/benchmark/: count_benchmark.c  count_benchmark.h  nodes_benchmark.c  nodes_benchmark.h
engine/can_move/: black_bishop_can_move.c  black_king_can_move.c  black_knight_can_move.c  black_pawn_can_move.c  black_queen_can_move.c  black_rook_can_move.c  white_bishop_can_move.c  white_king_can_move.c  white_knight_can_move.c  white_pawn_can_move.c  white_queen_can_move.c  white_rook_can_move.c
engine/capture_generation/: black_bishop_captures.c  black_king_captures.c  black_knight_captures.c  black_pawn_captures.c  black_queen_captures.c  black_rook_captures.c  white_bishop_captures.c  white_king_captures.c  white_knight_captures.c  white_pawn_captures.c  white_queen_captures.c  white_rook_captures.c
engine/move_generation/: black_bishop_moves.c  black_king_moves.c  black_knight_moves.c  black_pawn_moves.c  black_queen_moves.c  black_rook_moves.c  white_bishop_moves.c  white_king_moves.c  white_knight_moves.c  white_pawn_moves.c  white_queen_moves.c  white_rook_moves.c
engine/psudo_move_generation/: black_bishop_psudo_moves.c  black_king_psudo_moves.c  black_knight_psudo_moves.c  black_pawn_psudo_moves.c  black_queen_psudo_moves.c  black_rook_psudo_moves.c  white_bishop_psudo_moves.c  white_king_psudo_moves.c  white_knight_psudo_moves.c  white_pawn_psudo_moves.c  white_queen_psudo_moves.c  white_rook_psudo_moves.c
engine/tests/: attack_test.c  attack_test.h  can_move_test.c  count_test.c  count_test.h  count_tests.h  encoded_move_test.c  psudo_move_count_test.c  psudo_move_count_test.h  test_utils.h  validate_board.c  validate_board.h
magic_bitboards/: bishop_magic_numbers.h  generate_bishop_bitboards.py  generate_rook_bitboards.py  rook_magic_numbers.h
src/: evalfile.c  evalfile.h  main.c  uci.c  uci.h
tests/: CMakeLists.txt  test_positions.h  test_threefold_repetition_positions.h  test_utils.h
tests/algorithm/: main.c  test_threefold_repetition.c  test_threefold_repetition.h
tests/algorithm/heuristic/: test_symetric_heuristic.c  test_symetric_heuristic.h
tests/utils/: test_bitboard.c
utils/: bitboard.c  bitboard.h  board.c  board.h  fen.c  fen.h  move.c  profile.c  utils.c  utils.h
